[#noissue] Remove Thrift serializer