@@ -16,14 +16,14 @@
 
 package com.navercorp.pinpoint.common.server.util;
 
-import com.navercorp.pinpoint.thrift.dto.TDeadlock;
+import com.navercorp.pinpoint.common.server.bo.event.DeadlockBo;
 import com.navercorp.pinpoint.thrift.dto.command.TCommandThreadDumpResponse;
 import org.apache.commons.lang3.ArrayUtils;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import static com.navercorp.pinpoint.common.server.util.AgentEventTypeCategory.AGENT_LIFECYCLE;
@@ -41,7 +41,7 @@ public enum AgentEventType {
     AGENT_UNEXPECTED_SHUTDOWN(10201, "Agent unexpected shutdown", Void.class, DURATIONAL, AGENT_LIFECYCLE),
     AGENT_CLOSED_BY_SERVER(10300, "Agent connection closed by server", Void.class, DURATIONAL, AGENT_LIFECYCLE),
     AGENT_UNEXPECTED_CLOSE_BY_SERVER(10301, "Agent connection unexpectedly closed by server", Void.class, DURATIONAL, AGENT_LIFECYCLE),
-    AGENT_DEADLOCK_DETECTED(10401, "Agent deadlock detected", TDeadlock.class, AGENT_LIFECYCLE),
+    AGENT_DEADLOCK_DETECTED(10401, "Agent deadlock detected", DeadlockBo.class, AGENT_LIFECYCLE),
     USER_THREAD_DUMP(20100, "Thread dump by user", TCommandThreadDumpResponse.class, USER_REQUEST, THREAD_DUMP),
     OTHER(-1, "Other event", String.class, AgentEventTypeCategory.OTHER);
     
@@ -63,7 +63,7 @@ public enum AgentEventType {
         if (ArrayUtils.isEmpty(category)) {
            return Collections.emptySet();
        }
-       return EnumSet.copyOf(Arrays.asList(category));
+       return EnumSet.copyOf(List.of(category));
     }
 
     public int getCode() {
